--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -31,6 +31,36 @@
         "clear": true
       },
       "detail": "Compiler: g++"
+    },
+    {
+      "label": "Build C++ Project (Debug)", // New task for debugging
+      "type": "cppbuild",
+      "command": "g++",
+      "args": [
+        "-g", // Add debug symbols
+        "-O0", // Optional: Disable optimizations
+        "${workspaceFolder}/main.cpp",
+        "${workspaceFolder}/src/*.cpp",
+        "-I",
+        "${workspaceFolder}/include",
+        "-o",
+        "${workspaceFolder}/build/output_debug.exe", // Different output name
+        "-mconsole"
+      ],
+      "options": {
+        "cwd": "${workspaceFolder}"
+      },
+      "problemMatcher": ["$gcc"],
+      "group": "build", // Not default, explicitly run for debug
+      "presentation": {
+        "echo": true,
+        "reveal": "always",
+        "focus": false,
+        "panel": "shared",
+        "showReuseMessage": false,
+        "clear": true
+      },
+      "detail": "Compiler: g++ (Debug Build with Symbols)"
     }
   ]
 }
